# ddbase

./: .gitignore  Cargo.toml  README.md  cspell.json  deny.toml  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/: funding.yml
.github/actions/setup-node/: action.yml
.github/workflows/: CI.yml
apps/cargo-link2/: Cargo.toml  README.md
apps/cargo-link2/src/: main.rs
crates/appcore-app-spec/: Cargo.toml
crates/appcore-app-spec/examples/: update.rs
crates/appcore-app-spec/src/: lib.rs  nextjs.rs
crates/appcore-cli/: Cargo.toml  README.md
crates/appcore-cli/src/: config.rs  main.rs  provision.rs
crates/appcore-cli/src/vendors/: coolify.rs  logto.rs  mod.rs  vercel.rs
crates/bytes-str/: Cargo.toml
crates/bytes-str/src/: byte_str.rs  byte_string.rs
crates/cow-replace/: Cargo.toml
crates/cow-replace/src/: lib.rs
crates/ddrpc/: Cargo.toml
crates/ddrpc-rt/: Cargo.toml
crates/default-from-serde/: Cargo.toml  README.md
crates/default-from-serde/src/: lib.rs  number.rs
crates/default-from-serde/tests/: enums.rs  structs.rs
crates/derive-default-from-serde/: Cargo.toml  README.md
crates/derive-default-from-serde/src/: lib.rs
crates/derive-serde-default/: Cargo.toml  README.md
crates/dudy-malloc/: Cargo.toml  README.md
crates/hstr/: Cargo.toml  README.md
crates/hstr/benches/: libs.rs
crates/hstr/src/: dynamic.rs  global_store.rs  lib.rs  tagged_value.rs  tests.rs
crates/hstr/src/repr/: capacity.rs  heap.rs  inline.rs  interned.rs  mod.rs  nonmax.rs  nonmax_u8.rs  static_ref.rs
crates/is-macro/: Cargo.toml
crates/is-macro/src/: lib.rs
crates/par-core/: Cargo.toml  README.md
crates/par-core/src/: lib.rs
crates/par-iter/: Cargo.toml  README.md
crates/par-iter/src/: lib.rs  prelude.rs  range.rs  range_inclusive.rs  str.rs
crates/par-iter/src/compile_fail/: cannot_collect_filtermap_data.rs  cannot_zip_filtered_data.rs  cell_par_iter.rs  must_use.rs  no_send_par_iter.rs  rc_par_iter.rs
crates/par-iter/src/iter/: chain.rs  empty.rs  from_par_iter.rs  mod.rs  multizip.rs  once.rs  par_bridge.rs  repeat.rs  splitter.rs  walk_tree.rs
crates/par-iter/src/iter/collect/: test.rs
crates/par-iter/src/iter/plumbing/: README.md  mod.rs
crates/par-iter/src/slice/: mod.rs  sort.rs
crates/par-join/: Cargo.toml
crates/shrink-to-fit/: Cargo.toml
crates/shrink-to-fit-macro/: Cargo.toml
crates/shrink-to-fit-macro/src/: lib.rs
crates/shrink-to-fit/src/: autoderef.rs  lib.rs  maybe.rs
crates/shrink-to-fit/tests/: derive.rs
crates/st-map/: .rustfmt.toml  Cargo.toml  README.md
crates/st-map/src/: lib.rs
crates/st-map/tests/: arg.rs  arg_bound.rs  no_arg.rs
crates/static-map-macro/: Cargo.toml  README.md
crates/static-map-macro/src/: lib.rs  util.rs
crates/tagged-union/: Cargo.toml
crates/tagged-union-macro/: Cargo.toml
crates/tagged-union-macro/src/: lib.rs
crates/tagged-union/src/: lib.rs
crates/tagged-union/tests/: pat.rs
schemas/: appcore-app.json
xtask/: Cargo.toml
