[workspace]
members  = ["apps/cargo-link2", "crates/*"]
resolver = "2"


[workspace.package]
edition    = "2021"
license    = "Apache-2.0"
repository = "https://github.com/dudykr/ddbase.git"

[workspace.dependencies]
anyhow                    = "1.0.86"
arrayvec                  = "0.7.2"
cargo-subcommand-metadata = "0.1"
cargo_metadata            = "0.18.1"
clap                      = "4.5.13"
criterion                 = "0.5.1"
hashbrown                 = { version = "0.15.2", default-features = false }
heck                      = "0.5.0"
indexmap                  = { version = "2.7.1", default-features = false }
new_debug_unreachable     = "1.0.4"
num_cpus                  = "1.16.0"
once_cell                 = "1.18.0"
phf                       = "0.11.2"
proc-macro2               = "1.0.70"
quote                     = "1.0.33"
rayon                     = "1.8.0"
rkyv                      = "0.7.42"
rustc-hash                = "1.1.0"
serde                     = "1.0.192"
serde_derive              = "1.0.193"
serde_json                = { version = "1", default-features = false }
syn                       = "2.0.39"
toml_edit                 = "0.22.20"
triomphe                  = "0.1.11"
