[workspace]
members  = ["apps/cargo-link2", "crates/*"]
resolver = "2"


[workspace.package]
authors    = ["Donny <kdy1997.dev@gmail.com>"]
edition    = "2021"
license    = "Apache-2.0"
repository = "https://github.com/dudykr/ddbase.git"

[workspace.dependencies]
Inflector                 = "0.11.4"
anyhow                    = "1.0.91"
arrayvec                  = "0.7.2"
async-recursion           = "1.1.1"
auto_impl                 = "1.2.0"
base64                    = "0.22.1"
cached                    = "0.54.0"
cargo-subcommand-metadata = "0.1"
cargo_metadata            = "0.18.1"
chili                     = "0.2.0"
clap                      = "4.5.23"
criterion                 = "0.5.1"
dotenv                    = "0.15.0"
either                    = "1"
futures                   = "0.3.31"
futures-util              = "0.3.31"
fxhash                    = "0.2.1"
hashbrown                 = { version = "0.15.2", default-features = false }
heck                      = "0.5.0"
hstr                      = "0.2.12"
ignore                    = "0.4.23"
indexmap                  = { version = "2.7.1", default-features = false }
new_debug_unreachable     = "1.0.4"
num_cpus                  = "1.16.0"
once_cell                 = "1.20.2"
phf                       = "0.11.2"
proc-macro2               = "1.0.70"
quote                     = "1.0.33"
rand                      = "0.8.5"
rand_xorshift             = "0.3"
rayon                     = "1.10.0"
regex                     = "1.11.1"
reqwest                   = "0.12.12"
rkyv                      = "0.7.42"
rustc-hash                = "2.1.1"
schemars                  = "0.8.21"
scoped-tls                = "1"
serde                     = "1.0"
serde_derive              = "1.0.217"
serde_json                = { version = "1", default-features = false }
serde_yaml                = "0.9.34"
smallvec                  = { version = "1", default-features = false }
swc_malloc                = "1.0.0"
syn                       = "2.0.39"
tokio                     = "1.42.0"
toml_edit                 = "0.22.20"
tracing                   = "0.1.41"
tracing-subscriber        = "0.3.19"
triomphe                  = "0.1.11"
url                       = "2.5.3"
