[package]
authors     = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Patch local dependencies with ease"
edition     = { workspace = true }
license     = { workspace = true }
name        = "cargo-link2"
repository  = { workspace = true }
version     = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
