[package]
authors     = { workspace = true }
description = "The specification for AppCore apps"
edition     = { workspace = true }
license     = { workspace = true }
name        = "appcore-app-spec"
repository  = { workspace = true }
version     = "0.1.0"

[dependencies]
rustc-hash   = { workspace = true }
schemars     = { workspace = true }
serde        = { workspace = true }
serde_derive = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
