[package]
authors     = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Derive default using `#[serde(default)]`"
edition     = "2021"
license     = "Apache-2.0"
name        = "default-from-serde"
repository  = "https://github.com/dudykr/ddbase.git"
version     = "0.1.1"

[features]
default = ["std"]
std     = ["serde/std"]

[dependencies]
derive-default-from-serde = { path = "../derive-default-from-serde", version = "0.1.1" }
serde                     = { version = "1", default-features = false }

[dev-dependencies]
serde_derive = "1.0.193"
