[package]
authors     = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Derive default using `#[serde(default)]`"
edition     = { workspace = true }
license     = { workspace = true }
name        = "default-from-serde"
repository  = { workspace = true }
version     = "0.1.3"

[features]
default = ["std"]
std     = ["serde/std"]

[dependencies]
derive-default-from-serde = { path = "../derive-default-from-serde", version = "0.1.1" }
serde                     = { workspace = true }

[dev-dependencies]
serde_derive = { workspace = true }
