[package]
authors     = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Derive default using `#[serde(default)]`"
edition     = { workspace = true }
license     = { workspace = true }
name        = "derive-default-from-serde"
repository  = { workspace = true }
version     = "0.1.2"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.70"
quote       = "1.0.33"
syn         = "2.0.39"
