[package]
authors     = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Derive default using `#[serde(default)]`"
edition     = { workspace = true }
license     = { workspace = true }
name        = "derive-default-from-serde"
repository  = { workspace = true }
version     = "0.1.3"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true }
