[package]
name = "dudy-malloc"
version = "0.1.1"
edition = "2021"
authors       = ["강동윤 <kdy1997.dev@gmail.com>"]
description   = "Easy way to configure best memory allocation for each platforms"
license       = "Apache-2.0"
repository    = "https://github.com/dudykr/ddbase.git"

[dependencies]

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc-rust = { version = "0.2" }

[target.'cfg(all(target_os = "linux", target_env = "gnu", any(target_arch = "x86_64", target_arch = "aarch64")))'.dependencies]
tikv-jemallocator = { version = "0.4", features = ["disable_initial_exec_tls"] }
