[package]
authors     = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Easy way to configure best memory allocation for each platforms"
edition     = { workspace = true }
license     = { workspace = true }
name        = "dudy-malloc"
repository  = { workspace = true }
version     = "0.1.1"

[dependencies]

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc-rust = { version = "0.2" }

[target.'cfg(all(target_os = "linux", target_env = "gnu", any(target_arch = "x86_64", target_arch = "aarch64")))'.dependencies]
tikv-jemallocator = { version = "0.4", features = ["disable_initial_exec_tls"] }
