[package]
authors     = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "A string type which is optimized for hash operations."
edition     = { workspace = true }
license     = { workspace = true }
name        = "hstr"
repository  = { workspace = true }
version     = "0.2.10"

[lib]
bench = false

[[bench]]
harness = false
name    = "libs"

[features]
atom_size_128 = []
atom_size_64  = []
rkyv          = ["dep:rkyv"]
serde         = ["dep:serde"]

[dependencies]
cfg-if = "1.0.0"
hashbrown             = { version = "0.14.3", default-features = false }
new_debug_unreachable = "1.0.4"
once_cell             = "1.18.0"
phf                   = "0.11.2"
rkyv                  = { version = "0.7.42", optional = true }
rustc-hash            = "1.1.0"
serde                 = { version = "1.0.192", optional = true }
static_assertions = "1.1.0"
triomphe              = "0.1.11"

[dev-dependencies]
compact_str  = "0.7.1"
criterion    = "0.5.1"
dudy-malloc  = { version = "0.1.0", path = "../dudy-malloc" }
kstring      = "2.0.0"
num_cpus     = "1.16.0"
rand         = "0.8.5"
rayon        = "1.8.0"
smartstring  = "1.0.1"
smol_str     = "0.2.0"
string_cache = "0.8.7"
