[package]
description = "Fork of rayon, with chili support"
edition     = { workspace = true }
license     = { workspace = true }
name        = "par-iter"
repository  = { workspace = true }
version     = "1.0.1"

[dependencies]
either   = { workspace = true }
par-core = { version = "1.0.0", path = "../par-core", default-features = false }

[dev-dependencies]
chili = { workspace = true }
par-core = { version = "1.0.0", path = "../par-core", default-features = false, features = [
    "chili",
] }
rand = { workspace = true }
rand_xorshift = { workspace = true }
