[package]
authors     = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Switchable parallel execution core"
edition     = { workspace = true }
include     = ["Cargo.toml", "src/**/*.rs"]
license     = { workspace = true }
name        = "par-join"
repository  = { workspace = true }
version     = "1.0.0"

[features]
default = ["chili"]
# Make it really parallel
parallel = []
# Use rayon for parallel execution
rayon = ["dep:rayon", "parallel"]
# Use chili for parallel execution
chili = ["dep:chili", "parallel"]

[dependencies]
chili     = { workspace = true, optional = true }
once_cell = { workspace = true }
rayon     = { workspace = true, optional = true }

[dev-dependencies]
scoped-tls = { workspace = true }
