[package]
description = "Derive macro for `shrink-to-fit` crate."
edition     = { workspace = true }
license     = { workspace = true }
name        = "shrink-to-fit-macro"
repository  = { workspace = true }
version     = "0.2.3"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote       = "1"
syn         = "2"
