[package]
edition.workspace    = true
license.workspace    = true
name                 = "shrink-to-fit"
repository.workspace = true
version              = "0.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hashbrown           = { workspace = true, optional = true, default-features = false }
indexmap            = { workspace = true, optional = true, default-features = false }
shrink-to-fit-macro = { version = "0.1.0", path = "../shrink-to-fit-macro", optional = true }

[features]
default   = ["derive"]
derive    = ["dep:shrink-to-fit-macro"]
hashbrown = ["dep:hashbrown"]
indexmap  = ["dep:indexmap"]
