[package]
description = "Recursively calls `shrink_to_fit` on all elements of the container."
edition     = { workspace = true }
license     = { workspace = true }
name        = "shrink-to-fit"
repository  = { workspace = true }
version     = "0.2.7"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hashbrown           = { workspace = true, optional = true, default-features = false }
indexmap            = { workspace = true, optional = true, default-features = false }
serde_json          = { workspace = true, optional = true, default-features = false }
shrink-to-fit-macro = { version = "0.2.3", path = "../shrink-to-fit-macro", optional = true }


[features]
default    = ["derive"]
derive     = ["dep:shrink-to-fit-macro"]
hashbrown  = ["dep:hashbrown"]
indexmap   = ["dep:indexmap"]
serde_json = ["dep:serde_json"]
# Specialization for nightly. `ShrinkToFit` will be called for `T` in `Vec<T>` and collection elements if T implements `ShrinkToFit`.
nightly = []
