[package]
authors     = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Runtime for a stack-alocated map"
edition     = "2018"
license     = "Apache-2.0"
name        = "st-map"
repository  = "https://github.com/dudykr/ddbase"
version     = "0.2.1"

[lib]

[dependencies]
arrayvec         = "0.7.2"
static-map-macro = { path = "../static-map-macro", version = "0.3.1" }
