[package]
authors     = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Macro to create a stack-alocated map"
edition     = "2018"
license     = "Apache-2.0"
name        = "static-map-macro"
repository  = "https://github.com/dudykr/ddbase"
version     = "0.3.1"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote       = "1"
syn         = { version = "2", features = ["full"] }
