[package]
authors     = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Macro to create a stack-alocated map"
edition     = "2018"
license     = { workspace = true }
name        = "static-map-macro"
repository  = { workspace = true }
version     = "0.3.3"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true, features = ["full"] }
