[package]
authors     = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "A real tagged union type for Rust"
edition     = "2021"
license     = "Apache-2.0"
name        = "tagged-union"
repository  = "https://github.com/dudykr/ddbase.git"
version     = "0.0.1"

[dependencies]
tagged-union-macro = { path = "../tagged-union-macro", version = "0.0.1" }
